# Projects

./: __main__.py  pyproject.toml
Shell/: Makefile
Shell/include/: shell.h
Shell/src/: main.c  shell.c
ipcheck/: __init__.py  routes.py  subfunc.py
ipcheck/templates/: index.html
