[project]
name = "ipcheck"
version = "0.1.0"
description = ""
authors = [
    {name = "miguel",email = "l51653@alunos.uevora.pt"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "ipaddress (>=1.0.23,<2.0.0)",
    "python-nmap (>=0.7.1,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
